--- a/Aboutme.html
+++ b/Aboutme.html
@@ -42,7 +42,7 @@
     <p>Thanks for stopping by this totally real and serious page.</p>
     
     back to home Page
-    <a href="Index.html">Home</a>
+    <a href="index.html">Home</a>
 
     <h1>Contact me</h1>
     <p>Email me at: 
